tests/fixtures/invalid/sorted_2_args.py
# sorted() takes at most 1 argument, got 2
x = sorted(1, 1)
